--- a/manifest.json
+++ b/manifest.json
@@ -3,10 +3,10 @@
 	"short_name": "Goku",
 	"theme_color": "#007fff",
 	"icons": [
-			{ "src": "/img/192x192.png", "sizes": "192x192", "type": "image/png" },
-			{ "src": "/img/512x512.png", "sizes": "512x512", "type": "image/png" },
-			{ "src": "/img/192x192.png", "sizes": "192x192", "type": "image/png", "purpose": "maskable" },
-			{ "src": "/img/512x512.png", "sizes": "512x512", "type": "image/png", "purpose": "maskable" }
+			{ "src": "./img/192x192.png", "sizes": "192x192", "type": "image/png" },
+			{ "src": "./img/512x512.png", "sizes": "512x512", "type": "image/png" },
+			{ "src": "./img/192x192.png", "sizes": "192x192", "type": "image/png", "purpose": "maskable" },
+			{ "src": "./img/512x512.png", "sizes": "512x512", "type": "image/png", "purpose": "maskable" }
 	],
 	"start_url": ".",
 	"orientation": "landscape",
